--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                        <index>true</index>
+                        <manifest>
+                            <mainClass>com.connectis.converter.Main</mainClass>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
+
         </plugins>
 
 
@@ -38,6 +42,7 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
